I added header section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
 </head>
 <body>
   <!-- Nav Bar -->
-    <header></header>
+    <header>
+      <!-- Logo -->
+      <a href="#" class="logo"><i class='bx bxs-shopping-bag'></i>Bag</a>
+      <!-- Menu -->
+      <i class='bx bx-menu' id="menu-icon"></i>
+      <!-- Nav Bar -->
+      <ul class="navbar">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#products">Products</a></li>
+          <li><a href="#customers">Customers</a></li>
+      </ul>
+
+      <!-- Right Icon -->
+      <div class="header-icon">
+        <i class='bx bx-search'></i>
+        <i class='bx bxs-cart-alt'><span>0</span></i>
+      </div>
+    </header>
 
 
 
