I added search input to my header search and make it interactive

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 
       <!-- Right Icon -->
       <div class="header-icon">
-        <i class='bx bx-search'></i>
+        <i class='bx bx-search' id="search-icon"></i>
         <i class='bx bxs-cart-alt'><span>0</span></i>
+      </div>
+
+      <!-- Search Box -->
+      <div class="search-box">
+        <input type="search" name="" id="" placeholder="Search here...">
       </div>
     </header>
 
