I added home page section and added animation to my home page image

--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
       </div>
     </header>
 
+    <!-- ========= -->
+    <!-- HOME SECTION -->
+
+    <section class="home" id="home">
+      <div class="home-text">
+        <h3>Fashion Bag</h3>
+        <h1>Look <span>Stylish</span> <br><span>Be</span> Stylish</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, autem ullam asperiores illo officiis consequuntur?</p>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+
+      <!-- Home Image -->
+      <div class="home-img">
+        <img src="./Images/home.png" alt="Bag">
+      </div>
+    </section>
+
 
 
     <script src="index.js"></script>
