I added about us section

--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Bags Website</title>
     <!-- Box Icon Link -->
-    <link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-</head>
-<body>
-  <!-- Nav Bar -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
+  </head>
+  <body>
+    <!-- Nav Bar -->
     <header>
       <!-- Logo -->
-      <a href="#" class="logo"><i class='bx bxs-shopping-bag'></i>Bag</a>
+      <a href="#" class="logo"><i class="bx bxs-shopping-bag"></i>Bag</a>
       <!-- Menu -->
-      <i class='bx bx-menu' id="menu-icon"></i>
+      <i class="bx bx-menu" id="menu-icon"></i>
       <!-- Nav Bar -->
       <ul class="navbar">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#products">Products</a></li>
-          <li><a href="#customers">Customers</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#products">Products</a></li>
+        <li><a href="#customers">Customers</a></li>
       </ul>
 
       <!-- Right Icon -->
       <div class="header-icon">
-        <i class='bx bx-search' id="search-icon"></i>
-        <i class='bx bxs-cart-alt'><span>0</span></i>
+        <i class="bx bx-search" id="search-icon"></i>
+        <i class="bx bxs-cart-alt"><span>0</span></i>
       </div>
 
       <!-- Search Box -->
       <div class="search-box">
-        <input type="search" name="" id="" placeholder="Search here...">
+        <input type="search" name="" id="" placeholder="Search here..." />
       </div>
     </header>
 
@@ -42,19 +44,38 @@
     <section class="home" id="home">
       <div class="home-text">
         <h3>Fashion Bag</h3>
-        <h1>Look <span>Stylish</span> <br><span>Be</span> Stylish</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, autem ullam asperiores illo officiis consequuntur?</p>
+        <h1>Look <span>Stylish</span> <br /><span>Be</span> Stylish</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
+          autem ullam asperiores illo officiis consequuntur?
+        </p>
         <a href="#" class="btn">Buy Now</a>
       </div>
 
       <!-- Home Image -->
       <div class="home-img">
-        <img src="./Images/home.png" alt="Bag">
+        <img src="./Images/home.png" alt="Bag" />
       </div>
     </section>
 
-
+    <!-- ========= -->
+    <!-- ABOUT SECTION -->
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="./Images/about.png" alt="bag" />
+      </div>
+      <div class="about-text">
+        <h2>About Us</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam quo
+          officia, quod dolore sint porro laboriosam libero explicabo odit iste?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex vero ratione atque ullam, dolore eius facere voluptatem laboriosam quidem!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo facere accusantium porro consequuntur quasi.</p>
+      <a href="#" class="btn">Learn More</a>
+      </div>
+    </section>
 
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
