I added product section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,59 @@
       </div>
     </section>
 
+    <!-- ==== -->
+    <!-- Products Section -->
+    <section class="products" id="products">
+      <div class="heading">
+        <h2>Our Popular Products</h2>
+      </div>
+      <div class="products-container">
+        <div class="box">
+          <img src="./Images/p1.png" alt="">
+          <h2>Louis Vuitton 2-way</h2>
+          <span>$24.99</span>
+          <i class='bx bxs-cart-add'></i>
+        </div>
+
+        <div class="box">
+          <img src="./Images/p2.png" alt="">
+          <h2>Louis Vuitton 2-way</h2>
+          <span>$24.99</span>
+          <i class='bx bxs-cart-add'></i>
+        </div>
+
+        <div class="box">
+          <img src="./Images/p3.png" alt="">
+          <h2>Louis Vuitton 2-way</h2>
+          <span>$24.99</span>
+          <i class='bx bxs-cart-add'></i>
+        </div>
+
+        <div class="box">
+          <img src="./Images/p4.png" alt="">
+          <h2>Louis Vuitton 2-way</h2>
+          <span>$24.99</span>
+          <i class='bx bxs-cart-add'></i>
+        </div>
+
+        <div class="box">
+          <img src="./Images/p5.png" alt="">
+          <h2>Louis Vuitton 2-way</h2>
+          <span>$24.99</span>
+          <i class='bx bxs-cart-add'></i>
+        </div>
+
+        <div class="box">
+          <img src="./Images/p6.png" alt="">
+          <h2>Louis Vuitton 2-way</h2>
+          <span>$24.99</span>
+          <i class='bx bxs-cart-add'></i>
+        </div>
+      </div>
+
+    </section>
+
+
     <script src="index.js"></script>
   </body>
 </html>
