I added customer section

--- a/index.html
+++ b/index.html
@@ -125,9 +125,57 @@
           <i class='bx bxs-cart-add'></i>
         </div>
       </div>
-
     </section>
 
+    <!-- ============= -->
+    <!-- Customer's Section -->
+
+    <section class="customers" id="customers">
+      <div class="heading">
+        <h2>Our Customer's</h2>
+      </div>
+      <div class="customers-container">
+      <div class="box">
+        <img src="./Images/f1.jpg" alt="">
+        <h2>Jennifer Valenzuela</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat accusantium numquam veniam magni quidem?</p>
+        <div class="stars">
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star-half'></i>
+        </div>
+      </div>
+
+      <div class="box">
+        <img src="./Images/f2.jpg" alt="">
+        <h2>Linda Smith</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat accusantium numquam veniam magni quidem?</p>
+        <div class="stars">
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star-half'></i>
+        </div>
+      </div>
+
+      <div class="box">
+        <img src="./Images/f4.jpg" alt="">
+        <h2>Janelle Hall</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat accusantium numquam veniam magni quidem?</p>
+        <div class="stars">
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star'></i>
+          <i class='bx bxs-star-half'></i>
+        </div>
+      </div>
+    </div>
+
+    </section>
 
     <script src="index.js"></script>
   </body>
