--- a/index.html
+++ b/index.html
@@ -174,7 +174,18 @@
         </div>
       </div>
     </div>
+    </section>
 
+    <!-- ================= -->
+    <!-- Newsletter -->
+    <section class="newsletter">
+      <h2>Subscribe for Special <br>Discounts</h2>
+
+      <form action="">
+        <input type="email" name="" id="" placeholder="Enter Your Email...">
+        <input type="submit" value="Subscribe" class="email-btn">
+
+      </form>
     </section>
 
     <script src="index.js"></script>
