--- a/index.html
+++ b/index.html
@@ -184,10 +184,50 @@
       <form action="">
         <input type="email" name="" id="" placeholder="Enter Your Email...">
         <input type="submit" value="Subscribe" class="email-btn">
-
       </form>
     </section>
 
+    <!-- Footer -->
+    <section class="footer">
+      <div class="footer-box">
+        <!-- Logo -->
+        <a href="#" class="logo"><i class="bx bxs-shopping-bag"></i>Bag</a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, iste.</p>
+        <div class="socials">
+          <a href="#"><i class='bx bxl-facebook'></i></a>
+          <a href="#"><i class='bx bxl-twitter'></i></a>
+          <a href="#"><i class='bx bxl-instagram'></i></a>
+          <a href="#"><i class='bx bxl-youtube'></i></a>
+        </div>
+      </div>
+
+      <div class="footer-box">
+        <h3>Support</h3>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Return Policy</a></li>
+        <li><a href="#">Terms Of Use</a></li>
+      </div>
+
+      <div class="footer-box">
+        <h3>View Guides</h3>
+        <li><a href="#">Payments</a></li>
+        <li><a href="#">Our Blogs</a></li>
+        <li><a href="#">Our Partners</a></li>
+        <li><a href="#">Shop Now</a></li>
+      </div>
+
+      <div class="footer-box contact">
+        <h3>Contacts</h3>
+       <span><i class='bx bxs-map'></i>250 New York City, USA 1001</span>
+       <span><i class='bx bxs-phone' ></i>+1 444 744 8444</span>
+       <span><i class='bx bxs-envelope' ></i>bag@shop.com</span>
+      </div>
+    </section>
+    <!-- Copy Right -->
+    <div class="copyright">
+      <p>&#169; Bag All Right Reserved.</p>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
