I updated the content of the project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Nav Bar -->
     <header>
       <!-- Logo -->
-      <a href="#" class="logo"><i class="bx bxs-shopping-bag"></i>Bag</a>
+      <a href="#" class="logo"><i class="bx bxs-shopping-bag"></i>VivBag</a>
       <!-- Menu -->
       <i class="bx bx-menu" id="menu-icon"></i>
       <!-- Nav Bar -->
@@ -46,8 +46,8 @@
         <h3>Fashion Bag</h3>
         <h1>Look <span>Stylish</span> <br /><span>Be</span> Stylish</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium,
-          autem ullam asperiores illo officiis consequuntur?
+          Unleash Your Style with Fashion Bag: Embrace Elegance and Stay
+          Fashionable!
         </p>
         <a href="#" class="btn">Buy Now</a>
       </div>
@@ -67,12 +67,29 @@
       <div class="about-text">
         <h2>About Us</h2>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam quo
-          officia, quod dolore sint porro laboriosam libero explicabo odit iste?
+          At VivBag, we believe that style is a powerful form of
+          self-expression. Our passion lies in curating trendy and high-quality
+          bags that exude confidence and elevate your fashion game. With a keen
+          eye for design and an unwavering commitment to excellence, we bring
+          you the latest trends that make heads turn.
         </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ex vero ratione atque ullam, dolore eius facere voluptatem laboriosam quidem!</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo facere accusantium porro consequuntur quasi.</p>
-      <a href="#" class="btn">Learn More</a>
+        <p>
+          We understand that a bag is not just an accessory, but an essential
+          part of your everyday life. That's why we meticulously select
+          materials that are both durable and stylish, ensuring that our bags
+          can keep up with your busy lifestyle. From sleek and sophisticated to
+          bold and edgy, our collection offers a wide range of options to suit
+          every occasion and personality.
+        </p>
+        <p>
+          At VivBag, our mission is to empower individuals to embrace their
+          unique style and make a statement wherever they go. With our carefully
+          crafted bags, you can confidently step out into the world, knowing
+          that you look stylish and are ready to conquer any fashion challenge.
+          Join us on this fashionable journey and unlock your true style
+          potential with VivBag.
+        </p>
+        <a href="#" class="btn">Learn More</a>
       </div>
     </section>
 
@@ -84,45 +101,45 @@
       </div>
       <div class="products-container">
         <div class="box">
-          <img src="./Images/p1.png" alt="">
+          <img src="./Images/p1.png" alt="" />
           <h2>Louis Vuitton 2-way</h2>
           <span>$24.99</span>
-          <i class='bx bxs-cart-add'></i>
+          <i class="bx bxs-cart-add"></i>
         </div>
 
         <div class="box">
-          <img src="./Images/p2.png" alt="">
+          <img src="./Images/p2.png" alt="" />
           <h2>Louis Vuitton 2-way</h2>
           <span>$24.99</span>
-          <i class='bx bxs-cart-add'></i>
+          <i class="bx bxs-cart-add"></i>
         </div>
 
         <div class="box">
-          <img src="./Images/p3.png" alt="">
+          <img src="./Images/p3.png" alt="" />
           <h2>Louis Vuitton 2-way</h2>
           <span>$24.99</span>
-          <i class='bx bxs-cart-add'></i>
+          <i class="bx bxs-cart-add"></i>
         </div>
 
         <div class="box">
-          <img src="./Images/p4.png" alt="">
+          <img src="./Images/p4.png" alt="" />
           <h2>Louis Vuitton 2-way</h2>
           <span>$24.99</span>
-          <i class='bx bxs-cart-add'></i>
+          <i class="bx bxs-cart-add"></i>
         </div>
 
         <div class="box">
-          <img src="./Images/p5.png" alt="">
+          <img src="./Images/p5.png" alt="" />
           <h2>Louis Vuitton 2-way</h2>
           <span>$24.99</span>
-          <i class='bx bxs-cart-add'></i>
+          <i class="bx bxs-cart-add"></i>
         </div>
 
         <div class="box">
-          <img src="./Images/p6.png" alt="">
+          <img src="./Images/p6.png" alt="" />
           <h2>Louis Vuitton 2-way</h2>
           <span>$24.99</span>
-          <i class='bx bxs-cart-add'></i>
+          <i class="bx bxs-cart-add"></i>
         </div>
       </div>
     </section>
@@ -135,55 +152,66 @@
         <h2>Our Customer's</h2>
       </div>
       <div class="customers-container">
-      <div class="box">
-        <img src="./Images/f1.jpg" alt="">
-        <h2>Jennifer Valenzuela</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat accusantium numquam veniam magni quidem?</p>
-        <div class="stars">
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star-half'></i>
+        <div class="box">
+          <img src="./Images/f1.jpg" alt="" />
+          <h2>Jennifer Valenzuela</h2>
+          <p>
+            "VivBag is my go-to for all my bag needs. The quality is top-notch,
+            and I always receive compliments on my stylish choices!"
+          </p>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
         </div>
-      </div>
 
-      <div class="box">
-        <img src="./Images/f2.jpg" alt="">
-        <h2>Linda Smith</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat accusantium numquam veniam magni quidem?</p>
-        <div class="stars">
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star-half'></i>
+        <div class="box">
+          <img src="./Images/f2.jpg" alt="" />
+          <h2>Linda Smith</h2>
+          <p>
+            "I am obsessed with my new bag from VivBag. It's not only trendy but
+            also incredibly functional. It's the perfect accessory for my busy
+            lifestyle!"
+          </p>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
         </div>
-      </div>
 
-      <div class="box">
-        <img src="./Images/f4.jpg" alt="">
-        <h2>Janelle Hall</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat accusantium numquam veniam magni quidem?</p>
-        <div class="stars">
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star'></i>
-          <i class='bx bxs-star-half'></i>
+        <div class="box">
+          <img src="./Images/f4.jpg" alt="" />
+          <h2>Janelle Hall</h2>
+          <p>
+            "VivBag never disappoints! Their attention to detail and unique
+            designs make me feel confident and fashionable. I'm a customer for
+            life!"
+          </p>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
         </div>
       </div>
-    </div>
     </section>
 
     <!-- ================= -->
     <!-- Newsletter -->
     <section class="newsletter">
-      <h2>Subscribe for Special <br>Discounts</h2>
+      <h2>Subscribe for Special <br />Discounts</h2>
 
       <form action="">
-        <input type="email" name="" id="" placeholder="Enter Your Email...">
-        <input type="submit" value="Subscribe" class="email-btn">
+        <input type="email" name="" id="" placeholder="Enter Your Email..." />
+        <input type="submit" value="Subscribe" class="email-btn" />
       </form>
     </section>
 
@@ -192,12 +220,15 @@
       <div class="footer-box">
         <!-- Logo -->
         <a href="#" class="logo"><i class="bx bxs-shopping-bag"></i>Bag</a>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, iste.</p>
+        <p>
+          Our passion lies in curating trendy and high-quality bags that exude
+          confidence and elevate your fashion game.
+        </p>
         <div class="socials">
-          <a href="#"><i class='bx bxl-facebook'></i></a>
-          <a href="#"><i class='bx bxl-twitter'></i></a>
-          <a href="#"><i class='bx bxl-instagram'></i></a>
-          <a href="#"><i class='bx bxl-youtube'></i></a>
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-instagram"></i></a>
+          <a href="#"><i class="bx bxl-youtube"></i></a>
         </div>
       </div>
 
@@ -219,9 +250,9 @@
 
       <div class="footer-box contact">
         <h3>Contacts</h3>
-       <span><i class='bx bxs-map'></i>250 New York City, USA 1001</span>
-       <span><i class='bx bxs-phone' ></i>+1 444 744 8444</span>
-       <span><i class='bx bxs-envelope' ></i>bag@shop.com</span>
+        <span><i class="bx bxs-map"></i>250 New York City, USA 1001</span>
+        <span><i class="bx bxs-phone"></i>+1 444 744 8444</span>
+        <span><i class="bx bxs-envelope"></i>bag@shop.com</span>
       </div>
     </section>
     <!-- Copy Right -->
